# Snowman-Raytracing

./: .gitattributes  CMakeLists.txt  CMakeSettings.json  README.md
framework/core/: CMakeLists.txt
framework/core/geometries/: teapot_patch.inl
framework/core/include/: camera.hpp  default_application.hpp  iapplication.hpp
framework/core/include/geometry/: capsule.hpp  cube.hpp  cylinder.hpp  geometry.hpp  geometry_base.hpp  sphere.hpp  teapot.hpp  torus.hpp
framework/core/include/opengl/: opengl_object.hpp  program.hpp  program_map.hpp  shader.hpp  texture.hpp  ubo.hpp
framework/core/include/scene/: advanced_scene_object.hpp  camera_ubo.hpp  light_ubo.hpp  material_ubo.hpp  model_ubo.hpp  pbr_material_ubo.hpp  phong_material_ubo.hpp  scene_object.hpp  scene_object_deprecated.hpp
framework/core/include/utils/: configuration.hpp  utils.hpp
framework/core/shaders/: gbuffer.frag  lit.frag  object.vert  object_330.vert  unlit.frag
framework/core/src/: camera.cpp  default_application.cpp  iapplication.cpp  manager.cpp
framework/core/src/geometry/: geometry.cpp  geometry_base.cpp
framework/core/src/opengl/: program.cpp  program_map.cpp  shader.cpp  texture.cpp
framework/core/src/utils/: utils.cpp
pv227_seminars/: CMakeLists.txt
pv227_seminars/project_2021_02/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
pv227_seminars/project_2021_02/shaders/: lit.frag  noise.glsl  particle_textured.frag  particle_textured.geom  particle_textured.vert  ray_tracing.frag
vcpkg_windows/installed/vcpkg/info/: egl-registry_2020-02-20_x64-windows.list  glad_0.1.33-1_x64-windows.list  glfw3_3.3.2_x64-windows.list  glm_0.9.9.8_x64-windows.list  gtest_1.10.0_x64-windows.list  imgui_1.79_x64-windows.list  (+4 more)
vcpkg_windows/scripts/buildsystems/: vcpkg.cmake
vcpkg_windows/scripts/cmake/: vcpkg_get_windows_sdk.cmake
(+133 files in other folders)
